--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "10.12.10",
     "@types/mocha": "5.2.5",
     "@types/webdriverio": "4.13.0",
+    "@types/chai": "4.1.7",
+    "chai": "4.2.0",
     "typescript": "3.1.6",
     "ts-node": "7.0.1",
     "webdriverio": "4.14.0"
