--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Demonstration project for students. Feburary 16",
   "scripts": {
     "test": "wdio ./wdio.conf.js",
-    "ci-test": "wdio --host 'ip-5236.sunline.net.ua' --port '4444' --path '/wd/hub' ./wdio.conf.js"
+    "ci-test": "wdio --host ip-5236.sunline.net.ua --port 4444 --path /wd/hub ./wdio.conf.js"
   },
   "dependencies": {
     "@types/node": "10.12.10",
